unpackaged/main/default/objects/Account/fields/Sends_in_the_Last_6_Months__c.field-meta.xml
<CustomField>
    <fullName>Sends_in_the_Last_6_Months__c</fullName>
    <description>Sends over the last 6 months</description>
    <label>Sends in the Last 6 Months</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>