unpackaged/main/default/objects/Account/fields/Shared_ID_Employee_ID_AD_login__c.field-meta.xml
<CustomField>
    <fullName>Shared_ID_Employee_ID_AD_login__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Shared ID (Employee ID, AD login)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>