unpackaged/main/default/objects/Account/fields/Smoking_Status__c.field-meta.xml
<CustomField>
    <fullName>Smoking_Status__c</fullName>
    <label>Smoking Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Never a Smoker</fullName>
            </value>
            <value>
                <fullName>Occasional Smoker</fullName>
            </value>
            <value>
                <fullName>Heavy Smoker</fullName>
            </value>
            <value>
                <fullName>Former Smoker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>