unpackaged/main/default/objects/Account/fields/Southern_Colorado_Service_Area__c.field-meta.xml
<CustomField>
    <fullName>Southern_Colorado_Service_Area__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Southern Colorado Service Area</label>
    <length>80</length>
    <type>Text</type>
</CustomField>