unpackaged/main/default/objects/Account/fields/Specialty__c.field-meta.xml
<CustomField>
    <fullName>Specialty__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Specialty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>