unpackaged/main/default/objects/Account/fields/Telehealth_Availability__c.field-meta.xml
<CustomField>
    <fullName>Telehealth_Availability__c</fullName>
    <label>Telehealth Availability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>