unpackaged/main/default/objects/Account/fields/Total_FY_Activities_with_an_MD__c.field-meta.xml
<CustomField>
    <fullName>Total_FY_Activities_with_an_MD__c</fullName>
    <label>Total FY Activities with an MD</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>