unpackaged/main/default/objects/Account/fields/Total_FY_High_Value_Activities__c.field-meta.xml
<CustomField>
    <fullName>Total_FY_High_Value_Activities__c</fullName>
    <label>Total FY High Value Activities</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>