unpackaged/main/default/objects/Account/fields/Total_FY_Low_Touch_Activities__c.field-meta.xml
<CustomField>
    <fullName>Total_FY_Low_Touch_Activities__c</fullName>
    <label>Total FY Low Touch Activities</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>