unpackaged/main/default/objects/Account/fields/Total_FY_Onsite_Activites__c.field-meta.xml
<CustomField>
    <fullName>Total_FY_Onsite_Activites__c</fullName>
    <label>Total FY Onsite Activities</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>