unpackaged/main/default/objects/Account/fields/Total_FY_Referrals__c.field-meta.xml
<CustomField>
    <fullName>Total_FY_Referrals__c</fullName>
    <label>Total FY Referrals</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>