unpackaged/main/default/objects/Account/fields/Total_FY_Referrals_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_FY_Referrals_Revenue__c</fullName>
    <label>Total FY Referrals Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>