unpackaged/main/default/objects/Account/fields/Trainer_Email__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Email__c</fullName>
    <description>Email address for the trainer for this business account.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Email address for the trainer for this business account.</inlineHelpText>
    <label>Trainer Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>