unpackaged/main/default/objects/Account/fields/Trainer_Name__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Name__c</fullName>
    <description>Name of the Trainer for this business account</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Name of the Trainer for this business account</inlineHelpText>
    <label>Trainer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>