unpackaged/main/default/objects/Account/fields/Trainer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Phone__c</fullName>
    <description>Phone number for the person who serves as a trainer at this account.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Phone number for the person who serves as a trainer at this account.</inlineHelpText>
    <label>Trainer Phone</label>
    <type>Phone</type>
</CustomField>