unpackaged/main/default/objects/Account/fields/Type_2_Diabetes_Dx__c.field-meta.xml
<CustomField>
    <fullName>Type_2_Diabetes_Dx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Type 2 Diabetes Dx</label>
    <type>Checkbox</type>
</CustomField>