unpackaged/main/default/objects/Account/fields/Type_2_Diabetes_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Type_2_Diabetes_Risk_Score__c</fullName>
    <label>Type 2 Diabetes Risk Score</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>