unpackaged/main/default/objects/Account/fields/UniqueEmailAccount__c.field-meta.xml
<CustomField>
    <fullName>UniqueEmailAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Patient Account that has a Unique Email address equal to the email address on this Account.</description>
    <inlineHelpText>The Patient Account that has a Unique Email address equal to the email address on this Account.</inlineHelpText>
    <label>Unique Email Match Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Unique Email Match Account)</relationshipLabel>
    <relationshipName>SameEmailAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>