unpackaged/main/default/objects/Account/fields/Upcoming_Mammography_Screen_Date__c.field-meta.xml
<CustomField>
    <fullName>Upcoming_Mammography_Screen_Date__c</fullName>
    <description>Date of upcoming mammography screening per Epic scheduled appointment</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date of upcoming mammography screening per Epic scheduled appointment</inlineHelpText>
    <label>Upcoming Mammography Screen Date</label>
    <type>Date</type>
</CustomField>