unpackaged/main/default/objects/Account/fields/Utilized_a_service_past_2_years__c.field-meta.xml
<CustomField>
    <fullName>Utilized_a_service_past_2_years__c</fullName>
    <inlineHelpText>Shows whether the patient has utilized any service in past two years.</inlineHelpText>
    <label>Utilized a service past 2 years</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>