unpackaged/main/default/objects/Account/fields/VIP__c.field-meta.xml
<CustomField>
    <fullName>VIP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox indicates that this patient requires special care due to their relationship with the health system or foundation.</description>
    <inlineHelpText>This checkbox indicates that this patient requires special care due to their relationship with the health system or foundation.</inlineHelpText>
    <label>VIP</label>
    <type>Checkbox</type>
</CustomField>