unpackaged/main/default/objects/Account/fields/VIP_Tier__c.field-meta.xml
<CustomField>
    <fullName>VIP_Tier__c</fullName>
    <description>General category of importance to the health system or foundation.</description>
    <inlineHelpText>General category of importance to the health system or foundation.</inlineHelpText>
    <label>VIP Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Aluminum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>