unpackaged/main/default/objects/Account/fields/Wealth_Score__c.field-meta.xml
<CustomField>
    <fullName>Wealth_Score__c</fullName>
    <description>The wealth score provided by the development team.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The wealth score provided by the development team.</inlineHelpText>
    <label>Wealth Score</label>
    <length>1</length>
    <type>Text</type>
</CustomField>