unpackaged/main/default/objects/Account/fields/Wealth_Score_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Wealth_Score_Last_Updated__c</fullName>
    <description>Date on which the person&#39;s Wealth Score was last updated.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date on which the person&#39;s Wealth Score was last updated.</inlineHelpText>
    <label>Wealth Score Last Updated</label>
    <type>Date</type>
</CustomField>