unpackaged/main/default/objects/Account/fields/Weight_in_Ounces__c.field-meta.xml
<CustomField>
    <fullName>Weight_in_Ounces__c</fullName>
    <label>Weight in Ounces</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>