unpackaged/main/default/objects/Account/fields/Wellness_Fairs__c.field-meta.xml
<CustomField>
    <fullName>Wellness_Fairs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wellness Fairs</label>
    <type>Checkbox</type>
</CustomField>