unpackaged/main/default/objects/Account/fields/Wellness_Fairs_P__c.field-meta.xml
<CustomField>
    <fullName>Wellness_Fairs_P__c</fullName>
    <label>Wellness Fairs %</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-25%</fullName>
            </value>
            <value>
                <fullName>26-50%</fullName>
            </value>
            <value>
                <fullName>51-75%</fullName>
            </value>
            <value>
                <fullName>76-100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>