unpackaged/main/default/objects/Account/fields/YVMC_Service_Area__c.field-meta.xml
<CustomField>
    <fullName>YVMC_Service_Area__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>YVMC Service Area</label>
    <length>80</length>
    <type>Text</type>
</CustomField>