unpackaged/main/default/objects/Account/recordTypes/Community_Group.recordType-meta.xml
<RecordType>
    <fullName>Community_Group</fullName>
    <active>true</active>
    <description>Represents groups in the community (churches, gyms, non-profits, associations, rotary, etc.) that influence prospects and patients</description>
    <label>Community Group</label>
</RecordType>