unpackaged/main/default/objects/Account/recordTypes/Consumer_Household.recordType-meta.xml
<RecordType>
    <fullName>Consumer_Household</fullName>
    <active>true</active>
    <description>Custom Consumer Household record type</description>
    <label>Consumer Household</label>
</RecordType>