unpackaged/main/default/objects/Account/recordTypes/Departments.recordType-meta.xml
<RecordType>
    <fullName>Departments</fullName>
    <active>true</active>
    <description>Hospital &amp; Clinic Departments or Locations</description>
    <label>Departments</label>
</RecordType>