unpackaged/main/default/objects/Account/recordTypes/Facility.recordType-meta.xml
<RecordType>
    <fullName>Facility</fullName>
    <active>true</active>
    <description>Represents a department or other medical facility</description>
    <label>Department</label>
</RecordType>