unpackaged/main/default/objects/Account/recordTypes/Hospital.recordType-meta.xml
<RecordType>
    <fullName>Hospital</fullName>
    <active>true</active>
    <description>Health System Hospital</description>
    <label>Hospital</label>
</RecordType>