unpackaged/main/default/objects/Account/recordTypes/Patient.recordType-meta.xml
<RecordType>
    <fullName>Patient</fullName>
    <active>true</active>
    <description>Represents a current patient or prospect</description>
    <label>Patient</label>
</RecordType>