unpackaged/main/default/objects/Account/recordTypes/Practice.recordType-meta.xml
<RecordType>
    <fullName>Practice</fullName>
    <active>true</active>
    <description>Practice (Employed, Affiliated, Independent)</description>
    <label>Practice</label>
</RecordType>