unpackaged/main/default/objects/Account/recordTypes/Standard.recordType-meta.xml
<RecordType>
    <fullName>Standard</fullName>
    <active>true</active>
    <description>Generic Accounts (Business)</description>
    <label>Standard</label>
</RecordType>