unpackaged/main/default/objects/Account/listViews/External.listView-meta.xml
<ListView>
    <fullName>External</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Community_Group,Account.Employer,Account.Hospital,Account.Practice</value>
    </filters>
    <label>External</label>
</ListView>