unpackaged/main/default/objects/Account/listViews/My_Employer_Accounts.listView-meta.xml
<ListView>
    <fullName>My_Employer_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Tier__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Wellness_Fairs__c</columns>
    <columns>Executive_Health__c</columns>
    <columns>Flu_Shots__c</columns>
    <columns>Occ_Health__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Employer</value>
    </filters>
    <label>My Employer Accounts</label>
</ListView>