unpackaged/main/default/objects/Account/listViews/Patients.listView-meta.xml
<ListView>
    <fullName>Patients</fullName>
    <columns>PC_LAST_NAME</columns>
    <columns>PC_FIRST_NAME</columns>
    <columns>PC_BIRTHDATE</columns>
    <columns>Age__c</columns>
    <columns>PC_ADDRESS2_STATE</columns>
    <columns>PC_EMAIL</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>Patient__c</columns>
    <columns>Utilized_a_service_past_2_years__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.Consumer</value>
    </filters>
    <filters>
        <field>PC_ADDRESS2_STATE</field>
        <operation>equals</operation>
        <value>Minnesota</value>
    </filters>
    <label>Patients and Prospective Patients - MN</label>
</ListView>