unpackaged/main/default/objects/Account/listViews/Primary_Care_Providers_MN.listView-meta.xml
<ListView>
    <fullName>Primary_Care_Providers_MN</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PC_DEPARTMENT</columns>
    <columns>Department_Specialty__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.Provider</value>
    </filters>
    <label>Primary Care Providers - MN</label>
</ListView>